--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "ninh",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --inspect index.js"
+    "start": "nodemon --inspect index.js",
+    "run dev": "node index.js"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
