--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "ninh",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "nodemon --inspect index.js",
     "start": "node index.js"
   },
   "dependencies": {
