--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "author": "ninh",
-  "license": "MIT",
+  "license": "NINH",
   "scripts": {
     "dev": "nodemon --inspect index.js",
     "start": "node index.js"
