--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "mongoose": "^5.4.2",
     "multer": "^1.4.1",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "react-dom": "^16.8.2"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
