--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.2",
     "multer": "^1.4.1",
     "pug": "^2.0.3",
